--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
     
+
+    <h1>salom dunyo</h1>
+    <ul class="text1">
+        <li class="text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, cupiditate!</li>
+        <li class="text2">Consequatur maxime adipisci dolorem aspernatur labore vel possimus quae ut.</li>
+        <li class="text2">Pariatur repellendus ea iure assumenda inventore modi error cumque unde!</li>
+        <li class="text2">Aut beatae aperiam recusandae, qui reprehenderit optio sequi nobis ducimus.</li>
+        <li class="text2">Culpa magnam recusandae blanditiis unde, optio debitis in cumque ipsa?</li>
+    </ul>
 </body>
 </html>
